removed quotations in queries as they are no longer needed