@@ -27,7 +27,7 @@ class QueryBuilderTest {
         dependency.setArtifactId("commons-lang3");
         List<String> result = testee.buildDependencyQueries(List.of(dependency));
         assertEquals(1, result.size());
-        assertEquals("g:%20org.apache.commons%20+AND+a:%20commons-lang3%20", result.get(0));
+        assertEquals("g:org.apache.commons+AND+a:commons-lang3", result.getFirst());
     }
 
     @Test
@@ -56,7 +56,7 @@ class QueryBuilderTest {
         plugin.setArtifactId("maven-compiler-plugin");
         List<String> result = testee.buildPluginQueries(List.of(plugin));
         assertEquals(1, result.size());
-        assertEquals("g:%20org.apache.maven.plugins%20+AND+a:%20maven-compiler-plugin%20", result.get(0));
+        assertEquals("g:org.apache.maven.plugins+AND+a:maven-compiler-plugin", result.getFirst());
     }
 
     @Test
